--- a/source/ConfigurationService.Api/appsettings.json
+++ b/source/ConfigurationService.Api/appsettings.json
@@ -7,12 +7,13 @@
     }
   },
   "AllowedHosts": "*",
+  "ClientOrigins": [],
   "Sources": {
     "GitHub": {
       "Uri": "https://api.github.com",
-      "Repo": "ConfigurationStorage",
-      "UserName": "apashkov-ext",
-      "PersonalToken": "1b4d44bd9a49b35e55d72e575cb37a6381c484ca"
+      "Repo": "",
+      "UserName": "",
+      "PersonalToken": ""
     }
   }
 }
