--- a/source/ConfigurationService.Api/ConfigurationService.Api.csproj
+++ b/source/ConfigurationService.Api/ConfigurationService.Api.csproj
@@ -5,5 +5,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\ConfigurationService.Application\ConfigurationService.Application.csproj" />
+    <ProjectReference Include="..\ConfigurationService.ServiceCollectionConfiguring\ConfigurationService.ServiceCollectionConfiguring.csproj" />
   </ItemGroup>
 </Project>
