--- a/source/ConfigurationService.ServiceCollectionConfiguring/ConfigurationService.ServiceCollectionConfiguring.csproj
+++ b/source/ConfigurationService.ServiceCollectionConfiguring/ConfigurationService.ServiceCollectionConfiguring.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
