--- a/source/ConfigurationService.Persistence/ConfigurationService.Persistence.csproj
+++ b/source/ConfigurationService.Persistence/ConfigurationService.Persistence.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\ConfigurationService.Domain\ConfigurationService.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ConfigImporting\" />
+  </ItemGroup>
+
 </Project>
