--- a/source/ConfigurationService.Tests/ConfigurationService.Tests.csproj
+++ b/source/ConfigurationService.Tests/ConfigurationService.Tests.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.2" />
     <PackageReference Include="MockQueryable.Moq" Version="5.0.0" />
   </ItemGroup>
 
