--- a/source/ConfigurationService.Api/appsettings.json
+++ b/source/ConfigurationService.Api/appsettings.json
@@ -6,14 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ClientOrigins": [],
-  "Sources": {
-    "GitHub": {
-      "Uri": "https://api.github.com",
-      "Repo": "",
-      "UserName": "",
-      "PersonalToken": ""
-    }
-  }
+  "AllowedHosts": "*"
 }
