--- a/source/ConfigurationService.Api/ConfigurationService.Api.csproj
+++ b/source/ConfigurationService.Api/ConfigurationService.Api.csproj
@@ -1,10 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
+
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\ConfigurationService.Application\ConfigurationService.Application.csproj" />
-    <ProjectReference Include="..\ConfigurationService.ServiceCollectionConfiguring\ConfigurationService.ServiceCollectionConfiguring.csproj" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ConfigurationService.ServicesConfiguring\ConfigurationService.ServicesConfiguring.csproj" />
+  </ItemGroup>
+
 </Project>
