--- a/source/ConfigurationService.Application/ConfigurationService.Application.csproj
+++ b/source/ConfigurationService.Application/ConfigurationService.Application.csproj
@@ -1,12 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.9" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ConfigurationService.Domain\ConfigurationService.Domain.csproj" />
