--- a/source/ConfigurationService.Domain/ConfigurationService.Domain.csproj
+++ b/source/ConfigurationService.Domain/ConfigurationService.Domain.csproj
@@ -1,11 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <None Remove="ValueObjects\OptionGroupName.cs~RF343bb818.TMP" />
-  </ItemGroup>
 
 </Project>
