--- a/source/ConfigurationService.ServicesConfiguring/ConfigurationService.ServicesConfiguring.csproj
+++ b/source/ConfigurationService.ServicesConfiguring/ConfigurationService.ServicesConfiguring.csproj
@@ -7,11 +7,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.9" />
-    <PackageReference Include="MockQueryable.Moq" Version="5.0.1" />
-    <PackageReference Include="Moq" Version="4.16.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.9" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConfigurationService.Application\ConfigurationService.Application.csproj" />
     <ProjectReference Include="..\ConfigurationService.Persistence\ConfigurationService.Persistence.csproj" />
   </ItemGroup>
 
