--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,16 @@ jobs:
       - name: build
         run: dotnet build source
 
-      - name: run tests
-        run: dotnet test --no-build --no-restore
+
+      - name: run tests for ConfigurationService.Api
+        run: dotnet test "source/ConfigurationService.Api.Tests/ConfigurationService.Api.Tests.csproj" --no-build --no-restore 
+        
+      - name: run tests for ConfigurationService.Domain
+        run: dotnet test "source/ConfigurationService.Domain.Tests/ConfigurationService.Domain.Tests.csproj" --no-build --no-restore  
+        
+      - name: run tests for ConfigurationService.Persistence
+        run: dotnet test "source/ConfigurationService.Persistence.Tests/ConfigurationService.Persistence.Tests.csproj" --no-build --no-restore
+
 
       - name: publish
         run: dotnet publish -c Release -p:UseAppHost=false
