--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,14 +21,14 @@ jobs:
         run: dotnet build source
 
 
-      - name: run tests for ConfigurationService.Api
-        run: dotnet test "source/ConfigurationService.Api.Tests/ConfigurationService.Api.Tests.csproj" --no-build --no-restore 
+      #- name: run tests for ConfigurationService.Api
+      #  run: dotnet test "source/ConfigurationService.Api.Tests/ConfigurationService.Api.Tests.csproj" --no-build --no-restore 
         
-      - name: run tests for ConfigurationService.Domain
-        run: dotnet test "source/ConfigurationService.Domain.Tests/ConfigurationService.Domain.Tests.csproj" --no-build --no-restore  
+      #- name: run tests for ConfigurationService.Domain
+      #  run: dotnet test "source/ConfigurationService.Domain.Tests/ConfigurationService.Domain.Tests.csproj" --no-build --no-restore  
         
-      - name: run tests for ConfigurationService.Persistence
-        run: dotnet test "source/ConfigurationService.Persistence.Tests/ConfigurationService.Persistence.Tests.csproj" --no-build --no-restore
+      #- name: run tests for ConfigurationService.Persistence
+      #  run: dotnet test "source/ConfigurationService.Persistence.Tests/ConfigurationService.Persistence.Tests.csproj" --no-build --no-restore
 
 
       - name: publish
