--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
 
 
       - name: publish
-        run: dotnet publish -c Release -p:UseAppHost=false
+        run: dotnet publish "source/ConfigurationService.Api/ConfigurationService.Api.csproj" -c Release -p:UseAppHost=false
 
       - name: deploy artifact
         uses: appleboy/scp-action@master
