--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /source/ConfigurationService.Api/.config
 /source/artifact
 /source/ConfigurationService.Api/logs
+/source/ConfigurationService.Api/appdata
