--- a/source/ConfigurationService.Api/ConfigurationService.Api.csproj
+++ b/source/ConfigurationService.Api/ConfigurationService.Api.csproj
@@ -1,15 +1,16 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog.Extensions.Logging" Version="1.7.3" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConfigurationService.Application\ConfigurationService.Application.csproj" />
     <ProjectReference Include="..\ConfigurationService.ServicesConfiguring\ConfigurationService.ServicesConfiguring.csproj" />
   </ItemGroup>
 
