--- a/source/ConfigurationService.Api/appsettings.Production.json
+++ b/source/ConfigurationService.Api/appsettings.Production.json
@@ -1,9 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Origins": "http://alpa-dev.ru:8080"
 }
