--- a/source/ConfigurationService.Api/appsettings.json
+++ b/source/ConfigurationService.Api/appsettings.json
@@ -1,10 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
+      "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Origins": "http://localhost:8080"
 }
