--- a/source/ConfigurationService.Api/nlog.config
+++ b/source/ConfigurationService.Api/nlog.config
@@ -10,11 +10,17 @@
 	<targets>
 		<!-- write logs to file -->
 		<target xsi:type="File" name="logfile" fileName="logs\application.log"
-				layout="${longdate}|${level}|${message} |${all-event-properties} ${exception:format=tostring}" />
+				layout="${longdate}|${level}|${message} |${exception:format=tostring}" />
+		<target xsi:type="Console"
+          name="logConsole"
+          layout="${longdate}|${level}|${message} |${exception:format=tostring}"
+          error="true"
+          detectConsoleAvailable="true"
+          writeBuffer="true" />
 	</targets>
 
 	<!-- rules to map from logger name to target -->
 	<rules>
-		<logger name="*" minlevel="Trace" writeTo="logfile" />
+		<logger name="*" minlevel="Trace" writeTo="logfile,logConsole" />
 	</rules>
 </nlog>
