--- a/source/ConfigurationService.Api/Properties/launchSettings.json
+++ b/source/ConfigurationService.Api/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     },
     "ConfigurationService.Api": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
