--- a/source/ConfigurationService.Api/appsettings.Production.json
+++ b/source/ConfigurationService.Api/appsettings.Production.json
@@ -6,5 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Origins": "http://www.alpa-net.ru"
+  "Origins": "http://www.alpa-net.ru:80"
 }
