--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,15 +36,15 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: sources
-      #- run: dotnet build
-      #- name: run tests for ConfigurationService.Api
-      #  run: dotnet test "ConfigurationService.Api.Tests/ConfigurationService.Api.Tests.csproj" --no-build --no-restore 
+      - run: dotnet build
+      - name: run tests for ConfigurationService.Api
+        run: dotnet test "ConfigurationService.Api.Tests/ConfigurationService.Api.Tests.csproj" --no-build --no-restore 
         
-      #- name: run tests for ConfigurationService.Domain
-      #  run: dotnet test "ConfigurationService.Domain.Tests/ConfigurationService.Domain.Tests.csproj" --no-build --no-restore  
+      - name: run tests for ConfigurationService.Domain
+        run: dotnet test "ConfigurationService.Domain.Tests/ConfigurationService.Domain.Tests.csproj" --no-build --no-restore  
         
-      #- name: run tests for ConfigurationService.Persistence
-      #  run: dotnet test "ConfigurationService.Persistence.Tests/ConfigurationService.Persistence.Tests.csproj" --no-build --no-restore
+      - name: run tests for ConfigurationService.Persistence
+        run: dotnet test "ConfigurationService.Persistence.Tests/ConfigurationService.Persistence.Tests.csproj" --no-build --no-restore
 
   publish:
     needs: tests
