--- a/source/ConfigurationService.Api/appsettings.Production.json
+++ b/source/ConfigurationService.Api/appsettings.Production.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Debug",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
   "Origins": "http://www.alpa-net.ru:80"
