--- a/source/ConfigurationManagementSystem.Api/appsettings.localhost.json
+++ b/source/ConfigurationManagementSystem.Api/appsettings.localhost.json
@@ -7,5 +7,5 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
-  "Origins": "http://localhost:8080"
+  "Origins": "http://www.alpa-net.ru:80"
 }
