--- a/source/ConfigurationManagementSystem.Api/ConfigurationManagementSystem.Api.csproj
+++ b/source/ConfigurationManagementSystem.Api/ConfigurationManagementSystem.Api.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog.Extensions.Logging" Version="1.7.4" />
+    <PackageReference Include="NLog.Web.AspNetCore" Version="4.14.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
