exception handling added tests updated GetConfigs story added

--- a/source/ConfigurationManagementSystem.Api/appsettings.json
+++ b/source/ConfigurationManagementSystem.Api/appsettings.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.EntityFrameworkCore.Database.Command": "Trace"
     }
@@ -14,7 +14,7 @@
   "SecuritySection": {
     "Salt": "sup@hero8",
     "SymmetricSecurityKey": "super-secret-key",
-    "TokenExpiration": "00:05:00:000",
+    "TokenExpiration": "00:05:00.000",
     "ValidIssuer": "http://localhost:5000",
     "ValidAudience": "http//localhost:5000"
   }
