- add new tests - add new stories

--- a/source/ConfigurationManagementSystem.Api/appsettings.json
+++ b/source/ConfigurationManagementSystem.Api/appsettings.json
@@ -7,6 +7,30 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Trace"
     }
   },
+  "NLog": {
+    "autoReload": true,
+    "throwConfigExceptions": true,
+    "internalLogLevel": "Info",
+    "internalLogFile": "logs\\internal.log",
+    "extensions": [
+      { "assembly": "NLog.Extensions.Logging" },
+      { "assembly": "NLog.Web.AspNetCore" }
+    ],
+    "targets": {
+      "file": {
+        "type": "File",
+        "fileName": "logs\\application.log",
+        "layout": "${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}"
+      }
+    },
+    "rules": [
+      {
+        "logger": "*",
+        "minLevel": "Info",
+        "writeTo": "file"
+      }
+    ]
+  },
   "AllowedHosts": "*",
   "Web": {
     "Origins": [ "http://localhost:8080" ]
@@ -17,5 +41,9 @@
     "TokenExpiration": "00:05:00.000",
     "ValidIssuer": "http://localhost:5000",
     "ValidAudience": "http//localhost:5000"
+  },
+  "ConnectionStrings": {
+    "postgres": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres",
+    "mssqllocaldb": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=ConfigurationStorage;"
   }
 }
