--- a/source/ConfigurationManagementSystem.ServicesConfiguring/ConfigurationManagementSystem.ServicesConfiguring.csproj
+++ b/source/ConfigurationManagementSystem.ServicesConfiguring/ConfigurationManagementSystem.ServicesConfiguring.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
   </ItemGroup>
 
   <ItemGroup>
