--- a/source/ConfigurationManagementSystem.Api/appsettings.json
+++ b/source/ConfigurationManagementSystem.Api/appsettings.json
@@ -45,5 +45,11 @@
   "ConnectionStrings": {
     "postgres": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres",
     "mssqllocaldb": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=ConfigurationStorage;"
+  },
+  "ApplicationFramework": {
+    "Assemblies": [
+      "ConfigurationManagementSystem.Application",
+      "ConfigurationManagementSystem.Persistence"
+    ]
   }
 }
