--- a/source/ConfigurationManagementSystem.Application/ConfigurationManagementSystem.Application.csproj
+++ b/source/ConfigurationManagementSystem.Application/ConfigurationManagementSystem.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ConfigurationManagementSystem.Domain\ConfigurationManagementSystem.Domain.csproj" />
+    <ProjectReference Include="..\ConfigurationManagementSystem.Framework\ConfigurationManagementSystem.Framework.csproj" />
   </ItemGroup>
 
 </Project>
