add implementation provider; add some interfaces; add config registrar; refactored; add appsettings reading in webFactory;

--- a/source/ConfigurationManagementSystem.Api/appsettings.json
+++ b/source/ConfigurationManagementSystem.Api/appsettings.json
@@ -46,7 +46,7 @@
     "postgres": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres",
     "mssqllocaldb": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=ConfigurationStorage;"
   },
-  "ApplicationFramework": {
+  "ApplicationFrameworkSection": {
     "Assemblies": [
       "ConfigurationManagementSystem.Application",
       "ConfigurationManagementSystem.Persistence"
