--- a/source/ConfigurationManagementSystem.Api/Properties/launchSettings.json
+++ b/source/ConfigurationManagementSystem.Api/Properties/launchSettings.json
@@ -14,14 +14,14 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "localhost"
       }
     },
     "ConfigurationService.Api": {
       "commandName": "Project",
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "localhost"
       },
       "dotnetRunMessages": "true",
       "applicationUrl": "http://localhost:5000"
