add dbContext Factory; Add docker; add help.txt; renaming, refactoring;

--- a/source/ConfigurationManagementSystem.Api/appsettings.json
+++ b/source/ConfigurationManagementSystem.Api/appsettings.json
@@ -43,8 +43,7 @@
     "ValidAudience": "http//localhost:5000"
   },
   "ConnectionStrings": {
-    "postgres": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres",
-    "mssqllocaldb": "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=ConfigurationStorage;"
+    "postgres": ""
   },
   "ApplicationFrameworkSection": {
     "Assemblies": [
