--- a/source/ConfigurationManagementSystem.Api/appsettings.localhost.json
+++ b/source/ConfigurationManagementSystem.Api/appsettings.localhost.json
@@ -7,6 +7,9 @@
       "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "postgres": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres"
+  },
   "Web": {
     "Origins": [ "http://www.alpa-net.ru:80" ]
   }
