--- a/source/ConfigurationManagementSystem.Persistence/ConfigurationManagementSystem.Persistence.csproj
+++ b/source/ConfigurationManagementSystem.Persistence/ConfigurationManagementSystem.Persistence.csproj
@@ -6,11 +6,21 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ConfigurationManagementSystem.Application\ConfigurationManagementSystem.Application.csproj" />
+    <ProjectReference Include="..\ConfigurationManagementSystem.Core\ConfigurationManagementSystem.Core.csproj" />
     <ProjectReference Include="..\ConfigurationManagementSystem.Domain\ConfigurationManagementSystem.Domain.csproj" />
   </ItemGroup>
 
