--- a/source/ConfigurationManagementSystem.ServicesConfiguring/ConfigurationManagementSystem.ServicesConfiguring.csproj
+++ b/source/ConfigurationManagementSystem.ServicesConfiguring/ConfigurationManagementSystem.ServicesConfiguring.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
